# humanoid_op_ros

./: .gitignore  LICENSE  README.md
src/catch_ros/: .gitignore  CMakeLists.txt  README.md  package.xml
src/catch_ros/cmake/: catch.cmake.em
src/catch_ros/src/: meta_info.cpp  meta_info.h  ros_junit_reporter.h  rostest_main.cpp  standalone_main.cpp
src/dynalib/: .gitignore  CMakeLists.txt  package.xml
src/dynalib/devices/: CM730.device  CM730_NOP.device  CM740.device  CM740_NOP.device  EX106.device  EX106P.device  MX.device  MX106.device  MX28.device  MX64.device  RX.device  RX28.device  RX64.device  USB2AX.device  generic.device
src/dynalib/env-hooks/: 50-dynatool.bash
src/dynalib/include/dynalib/: device.h  device_registry.h  device_setup.h  dxl_protocol.h  io.h  le_value.h  return_code.h  setup.h  static_buffer.h  units.h
src/dynalib/robots/: NOP.robot
src/dynalib/src/: device_registry.cpp  device_setup.cpp  io.cpp  setup.cpp
src/dynalib/src/impl/: debug_io.cpp  linux_serial.cpp
src/dynalib/tools/: CMakeLists.txt  dynatool.cpp
src/dynalib/util/: dynalib_dc.py
src/nimbro/behaviour/behaviour_exercise/: CMakeLists.txt  package.xml
src/nimbro/behaviour/state_controller/: CMakeLists.txt  package.xml
src/nimbro/behaviour/walk_and_kick/: CMakeLists.txt  package.xml
src/nimbro/cv/bgr2yuyv/: CMakeLists.txt  package.xml
src/nimbro/cv/calibration/: CMakeLists.txt  calibellipse.cpp  calibellipse.h  calibimagewidget.cpp  calibimagewidget.h  calibration.cpp  calibration.h  calibration.ui  calibrationnodelet.cpp  calibrationnodelet.h  calibscene.cpp  calibscene.h  calibview.cpp  calibview.h  calibwidget.cpp  calibwidget.h  cameraparamswidget.cpp  cameraparamswidget.h  histogram.cpp  histogram.h  histwidget.cpp  histwidget.h  package.xml  playbackcontrol.cpp  playbackcontrol.h  plugin_nodelet.xml
src/nimbro/launch/: CMakeLists.txt  README.md  package.xml
src/nimbro/launch/behaviour/: behaviour.launch
src/nimbro/launch/config/: .gitignore  cleanYaml.py  compareConfig.py  config_server.launch  config_xs0.yaml  config_xs1.yaml  config_xs2.yaml  config_xs4.yaml  copyConfig.py  field_model.yaml  listYaml.py  removeConfig.py  robot_param.launch  server.launch  yamlUtils.py
src/nimbro/launch/cv/: camera_calib.launch  cv.launch  cv_standalone.launch  dummy_camera_calib.launch  vision_module.launch
src/nimbro/launch/hardware/: dummy_robot_calib.launch  dummy_robot_demo_sitting.launch  dummy_robot_demo_standing.launch  dummy_robot_game.launch  dummy_robot_motion_test_sitting.launch  dummy_robot_motion_test_standing.launch  dummy_robot_standing_cap.launch  gazebo_robot_standing_cap.launch  joy.launch  robot.launch  robot_calib.launch  robot_common.launch  robot_common_vis.launch  robot_demo_sitting.launch  robot_demo_standing.launch  robot_dummy.launch  robot_dummy_calib.launch  robot_dummy_demo_sitting.launch  robot_dummy_demo_standing.launch  robot_dummy_motion_test.launch  robot_dummy_motion_test_sitting.launch  robot_dummy_motion_test_standing.launch  robot_dummy_standing_cap.launch  robot_dummy_standing_cpg.launch  robot_dummy_standing_indep.launch  robot_game.launch  robot_gazebo_indep.launch  robot_motion_test.launch  robot_motion_test_motion.launch  robot_motion_test_sitting.launch  robot_motion_test_standing.launch  robot_standing_cap.launch  robot_standing_cpg.launch  robot_standing_indep.launch
src/nimbro/launch/localization/: test_loc_against_bag.launch  test_particle_filter.launch
src/nimbro/launch/logging/: rrlogger_robotcontrol.launch
src/nimbro/launch/motions/: Awesome_Kick_leg.yaml  kick_leg.yaml  kick_leg_mirrored.yaml  kick_right_far.yaml  legBeside.yaml  mirror_motion.py  trajectory_editor.launch
src/nimbro/launch/network/: communication.launch  comxs0.launch  param_receiver.yaml  param_sender.yaml
src/nimbro/launch/visualization/: bag_visualization.launch  nimbro-op.perspective  rqt.sh  rqt_base.sh  trajectory_editor_2.launch  vis_param.launch  visualization.launch  visualization_bag.launch  visualization_bench.launch  visualization_plotter.launch  visualization_standalone.launch
src/nimbro/scripts/: 90-cm730.rules  CMakeLists.txt  changeRobot.py  dynarecover.py  env.sh  filecheck.py  fix_ssh_speed.py  gazebo_apply_force.py  motion_test.py  package.xml  readme.txt  robot_setup.sh  set_camera.py  set_cm7X0.py  set_netUdev.py  system_setup.sh  wifi.py
src/nimbro/scripts/env-hooks/: 50-common-funcs.bash
src/nimbro_config_server/parameter_tuner/: CMakeLists.txt  plugin_rqt_gui.xml
src/nimbro_config_server/parameter_tuner/include/: parametertuner.h
src/nimbro_config_server/parameter_tuner/src/: historykeeper.cpp  parameteritem.cpp  parametertuner.cpp  parametertuner.ui
src/nimbro_config_server/remote_tuner/: CMakeLists.txt  package.xml  rqt_plugin.xml
src/nimbro_config_server/remote_tuner/src/: parameter_delegate.cpp  parameter_delegate.h  parameter_item.cpp  parameter_item.h  parameter_model.cpp  parameter_model.h  remote_tuner.cpp  remote_tuner.h  remote_tuner.ui
src/nimbro_config_server/tf_tuner/: CMakeLists.txt  package.xml
src/nimbro_config_server/tf_tuner/src/: tf_tuner.cpp
src/nimbro_vis/plot_msgs/: CMakeLists.txt  README.dox  package.xml
src/nimbro_vis/plot_msgs/msg/: JointCommand.msg  Plot.msg  PlotPoint.msg
src/nimbro_vis/plot_msgs/test/: plot_manager_test.cpp  plot_manager_test.test
src/nimbro_vis/plotter/: CMakeLists.txt  README.md  package.xml  plugin_rqt_gui.xml
src/nimbro_vis/plotter/src/: plot.cpp  plotfiltermodel.cpp  plotmodel.cpp  plotter.cpp  plotter.ui  plotwidget.cpp
src/nimbro_vis/rqt_arg_injector/: CMakeLists.txt  package.xml
src/nimbro_vis/rqt_arg_injector/src/: rqt_arg_injector.cpp
src/nimbro_vis/rqt_log_viewer/: CMakeLists.txt  package.xml  plugin_rqt_gui.xml
src/nimbro_vis/rqt_log_viewer/src/: checkboxdelegate.cpp  checkboxdelegate.h  combobox_delegate.cpp  combobox_delegate.h  filter_line_edit.cpp  filter_line_edit.h  log_filter.cpp  log_filter.h  (+14 more)
src/nimbro_vis/timewarp/: CMakeLists.txt  README.md  package.xml
src/nimbro_vis/vis_utils/: CMakeLists.txt  package.xml
(+1605 files in other folders)
