cmake_minimum_required(VERSION 2.8.3)
project(launch)

find_package(catkin REQUIRED)

catkin_package()

install(CODE "
file(REMOVE_RECURSE \"${CMAKE_INSTALL_PREFIX}/${CATKIN_PACKAGE_SHARE_DESTINATION}/behaviour\")
file(REMOVE_RECURSE \"${CMAKE_INSTALL_PREFIX}/${CATKIN_PACKAGE_SHARE_DESTINATION}/config\")
file(REMOVE_RECURSE \"${CMAKE_INSTALL_PREFIX}/${CATKIN_PACKAGE_SHARE_DESTINATION}/cv\")
file(REMOVE_RECURSE \"${CMAKE_INSTALL_PREFIX}/${CATKIN_PACKAGE_SHARE_DESTINATION}/hardware\")
file(REMOVE_RECURSE \"${CMAKE_INSTALL_PREFIX}/${CATKIN_PACKAGE_SHARE_DESTINATION}/motions\")
file(REMOVE_RECURSE \"${CMAKE_INSTALL_PREFIX}/${CATKIN_PACKAGE_SHARE_DESTINATION}/network\")
file(REMOVE_RECURSE \"${CMAKE_INSTALL_PREFIX}/${CATKIN_PACKAGE_SHARE_DESTINATION}/visualization\")
file(MAKE_DIRECTORY \"${CMAKE_INSTALL_PREFIX}/${CATKIN_PACKAGE_SHARE_DESTINATION}/config/vision/samples\")
")
install(DIRECTORY behaviour config cv hardware motions network visualization
	DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
	PATTERN config/backup* EXCLUDE
	PATTERN config/vision/samples* EXCLUDE
)
