<?xml version="1.0"?>
<package>
  <name>launch</name>
  <version>0.0.0</version>
  <description>Common launch files</description>

  <maintainer email="max.schwarz@uni-bonn.de">Max Schwarz</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>