<?xml version="1.0"?>
<package>
  <name>vis_utils</name>
  <version>0.0.0</version>
  <description>The visualisation utilities package</description>
  <maintainer email="pallgeuer@ais.uni-bonn.de">Philipp Allgeuer</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <test_depend>gtest</test_depend>

  <export>
  </export>
</package>